			   XPCE ChangeLog
			   ==============

* FIXED: Pass Prolog exceptions on send(@prolog, ...).  Alexandre Vautier.

VERSION 6.6.43, distributed with SWI-Prolog 5.6.43
==================================================

* MODIFIED: Use new portability flags.

* UPDATED: About dialog.

VERSION 6.6.40, distributed with SWI-Prolog 5.6.40
==================================================

* FIXED: Possible crash in graphical->layout.  Anjo Anjewierden.

VERSION 6.6.39, distributed with SWI-Prolog 5.6.39
==================================================

* ADDED: @pce<->application_data to reflect the directory for storing
  user application settings.

VERSION 6.6.37, distributed with SWI-Prolog 5.6.37
==================================================

* FIXED: Bug#294: PceEmacs colouring of pce_image_directory arg. 

* FIXED: Bug#290: text<-postscript ignores <-wrap: wrap_fixed_width.
  Tom Conlon.

VERSION 6.6.36, distributed with SWI-Prolog 5.6.36
==================================================

* FIXED: Possible 1 point to small boundingbox when writing (scaled)
  postscript.  Bert Bredeweg.

VERSION 6.6.35, distributed with SWI-Prolog 5.6.35
==================================================

* FIXED: Bug#285: image<-postscript.  Dmitry.

* FIXED: editor->newline if the text-buffer is in wide-character mode
  on big-endian machines (Mac PPC).

* FIXED: Bug#281: Error in class tabular.   Bruno Martinez,

* FIXED: Failing double-click detection due to too short datatype.

VERSION 6.6.34, distributed with SWI-Prolog 5.6.34
==================================================

* PORT: Work-around for version problems in Xft libraries.

VERSION 6.6.32, distributed with SWI-Prolog 5.6.32
==================================================

* ADDED: Edit breakpoints and define how they are handled in the debugger.

* ENHANCED: some issues in table-layout.

VERSION 6.6.30, distributed with SWI-Prolog 5.6.30
==================================================
